// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssuesTableTest With issue filing support 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <div
      class="issuesTableContent"
    >
      <mock-issuefilingdialog
        isopen="false"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`IssuesTableTest automated checks disabled 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <div
      class="issuesTableContent"
    />
  </div>
</DocumentFragment>
`;

exports[`IssuesTableTest includes subtitle if specified 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <div
      class="issuesTableSubtitle"
    >
      test subtitle text
    </div>
    <div
      class="ms-Spinner scanningSpinner root-110"
      role="alert"
    >
      <div
        class="ms-Spinner-circle ms-Spinner--large circle-111"
      />
      <div
        class="ms-Spinner-label label-112"
      >
        Loading...
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IssuesTableTest not scanning, issuesEnabled is true 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <div
      class="issuesTableContent"
    />
  </div>
</DocumentFragment>
`;

exports[`IssuesTableTest spinner for scanning state 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <div
      class="issuesTableContent"
    >
      <div
        class="ms-Spinner scanningSpinner root-110"
        role="alert"
      >
        <div
          class="ms-Spinner-circle ms-Spinner--large circle-111"
        />
        <div
          class="ms-Spinner-label label-112"
        >
          Scanning...
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IssuesTableTest spinner, issuesEnabled == null 1`] = `
<DocumentFragment>
  <div
    class="issuesTable"
  >
    <h1>
      test title test steps text
    </h1>
    <div
      class="ms-Spinner scanningSpinner root-110"
      role="alert"
    >
      <div
        class="ms-Spinner-circle ms-Spinner--large circle-111"
      />
      <div
        class="ms-Spinner-label label-112"
      >
        Loading...
      </div>
    </div>
  </div>
</DocumentFragment>
`;
